--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	<!-- Preload critical images used in the hero and social previews -->
 	<link rel="preload" as="image" href="images/bluyel.png">
 	<link rel="preload" as="image" href="images/WebApp%20Landing.png">
-	<link rel="preload" as="image" href="images/nobglog.png">
+	<link rel="preload" as="image" href="images/ONWhiteBeONESportslogo.png">
+	<link rel="preload" as="image" href="images/Computer2.png">
 
 	<!-- SEO: concise description, robots and canonical -->
 	<meta name="description" content="BeOne Sports — mobile computer vision for sports training. Immediate athlete insights, coach tools, and integrated athlete management.">
@@ -23,7 +24,7 @@
 	<!-- Open Graph / Social: improves sharing previews -->
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="BeOne Sports — Mobile computer vision for sports training">
-	<meta property="og:description" content="BeOne Sports provides instant movement insights for athletes and coaches — no sensors required.">
+ 	<meta property="og:description" content="BeOne Sports provides instant movement insights for athletes and coaches — no sensors required.">
 	<!-- Inline override to ensure hero background loads after other styles -->
 	<style>
 	  .hero{background-image: url("images/Deskblueyellow.png") !important; background-size:100% 100% !important; background-position:center center !important; background-repeat:no-repeat !important}
@@ -69,7 +70,11 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="BeOne Sports — Mobile computer vision for sports training">
 	<meta name="twitter:description" content="Instant athlete feedback, coach tools, and team insights.">
-	<meta name="twitter:image" content="images/WebApp%20Landing.png">
+	<meta name="twitter:image" content="images/Computer2.png">
+	<meta name="twitter:image:alt" content="BeOne Sports — product preview">
+	<meta property="og:image" content="images/Computer2.png">
+	<meta property="og:image:width" content="1200">
+	<meta property="og:image:height" content="630">
 
 	<!-- Security: basic Content Security Policy (modify for your production domain as needed) -->
 	<meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' https:; script-src 'self' https: 'unsafe-inline'; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; media-src 'self' https:; frame-ancestors 'self'; base-uri 'self'; form-action 'self';">
@@ -81,7 +86,7 @@
 	  "@type": "Organization",
 	  "name": "BeOne Sports",
 	  "url": "/",
-	"logo": "images/nobglog.png"
+	"logo": "images/ONWhiteBeONESportslogo.png"
 	}
 	</script>
 
@@ -100,37 +105,12 @@
 	<header class="nav">
 		<div class="container nav-inner">
 			<a class="brand" href="./">
-						<picture>
-<source type="image/avif" srcset="images/nobglog.png">
-<source type="image/webp" srcset="images/nobglog.png">
-<picture>
-<source type="image/avif" srcset="images/nobglog.avif">
-<source type="image/webp" srcset="images/nobglog.webp">
-<picture>
-<source type="image/avif" srcset="images/nobglog.avif">
-<source type="image/webp" srcset="images/nobglog.webp">
-<picture>
-<source type="image/avif" srcset="images/nobglog.avif">
-<source type="image/webp" srcset="images/nobglog.webp">
-<picture>
-<source type="image/avif" srcset="images/nobglog.avif">
-<source type="image/webp" srcset="images/nobglog.webp">
-<picture>
-<source type="image/avif" srcset="images/nobglog.avif">
-<source type="image/webp" srcset="images/nobglog.webp">
-<img src="images/nobglog.png" alt="BeOne Sports" class="brand-logo" decoding="async">
-</picture>
-</picture>
-</picture>
-</picture>
-</picture>
-</picture>
+				<img src="images/ONWhiteBeONESportslogo.png" alt="BeOne Sports" class="brand-logo" decoding="async">
 			</a>
 			<nav class="desktop-nav">
-				<a href="#product">Product</a>
-				<a href="#pricing">Pricing</a>
-				<a href="#docs">Docs</a>
-				<a href="#company">Company</a>
+				<a href="./">Home</a>
+				<a href="#get-started">Get BeONE</a>
+				<a href="#contact">Contact Sales</a>
 			</nav>
 			<button class="hamburger" id="hamburgerBtn" aria-label="Toggle menu" aria-expanded="false">
 				<span></span>
@@ -139,10 +119,9 @@
 			</button>
 		</div>
 		<nav class="hamburger-menu" id="hamburgerMenu">
-			<a href="#product">Product</a>
-			<a href="#pricing">Pricing</a>
-			<a href="#docs">Docs</a>
-			<a href="#company">Company</a>
+			<a href="./">Home</a>
+			<a href="#get-started">Get BeONE</a>
+			<a href="#contact">Contact Sales</a>
 		</nav>
 	</header>
 
@@ -223,21 +202,21 @@
 <source type="image/avif" srcset="images/Computer.png">
 <source type="image/webp" srcset="images/Computer.png">
 <picture>
-<source type="image/avif" srcset="images/Computer.png">
-<source type="image/webp" srcset="images/Computer.png">
+<source type="image/avif" srcset="images/Computer2.png">
+<source type="image/webp" srcset="images/Computer2.png">
 <picture>
-<source type="image/avif" srcset="images/Computer.png">
-<source type="image/webp" srcset="images/Computer.png">
+<source type="image/avif" srcset="images/Computer2.png">
+<source type="image/webp" srcset="images/Computer2.png">
 <picture>
-<source type="image/avif" srcset="images/Computer.png">
-<source type="image/webp" srcset="images/Computer.png">
+<source type="image/avif" srcset="images/Computer2.png">
+<source type="image/webp" srcset="images/Computer2.png">
 <picture>
-<source type="image/avif" srcset="images/Computer.png">
-<source type="image/webp" srcset="images/Computer.png">
+<source type="image/avif" srcset="images/Computer2.png">
+<source type="image/webp" srcset="images/Computer2.png">
 <picture>
-<source type="image/avif" srcset="images/Computer.png">
-<source type="image/webp" srcset="images/Computer.png">
-<img src="images/Computer.png" alt="Computer" class="webapplanding-image" loading="lazy" decoding="async">
+<source type="image/avif" srcset="images/Computer2.png">
+<source type="image/webp" srcset="images/Computer2.png">
+<img src="images/Computer2.png" alt="Computer" class="webapplanding-image" loading="lazy" decoding="async">
 </picture>
 </picture>
 </picture>
@@ -254,10 +233,21 @@
 				<h2 class="section-title">A fully integrated<br>athlete management<br>system (AMS)</h2>
 				<p class="section-lead">Manage your organization’s coaches &amp; athletes simply. Assign individual training outcomes remotely and generate club-level insights and performance trends.</p>
 				<div class="ams-media">
-					<video class="ams-video" autoplay muted loop playsinline>
-						<source src="videos/Animation2.webm" type="video/webm">
-						Your browser does not support the video tag.
-					</video>
+					<div class="nos-videos-grid">
+						<div class="nos-video-item">
+							<video class="nos-video" autoplay muted loop playsinline>
+								<source src="videos/Animation1.webm" type="video/webm">
+								Your browser does not support the video tag.
+							</video>
+						</div>
+						<div class="nos-video-item">
+							<video class="nos-video" preload="metadata" playsinline autoplay muted loop poster="images/WebApp%20Landing.png" controls>
+								<source src="videos/broadjump.webm" type="video/webm">
+								<source src="videos/broadjump.mp4" type="video/mp4">
+								Your browser does not support the video tag.
+							</video>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -279,14 +269,7 @@
 				<div class="nos-videos-grid">
 					<div class="nos-video-item">
 						<video class="nos-video" autoplay muted loop playsinline>
-							<source src="videos/Animation1.webm" type="video/webm">
-							Your browser does not support the video tag.
-						</video>
-					</div>
-					<div class="nos-video-item">
-						<video class="nos-video" preload="metadata" playsinline autoplay muted loop poster="images/WebApp%20Landing.png" controls>
-							<source src="videos/broadjump.webm" type="video/webm">
-							<source src="videos/broadjump.mp4" type="video/mp4">
+							<source src="videos/Animation2.webm" type="video/webm">
 							Your browser does not support the video tag.
 						</video>
 					</div>
@@ -428,31 +411,7 @@
 					</ul>
 					<a class="btn hp-cta" href="#">Join BeOne</a>
 					<div class="hp-logo">
-						<picture>
-<source type="image/avif" srcset="images/nobglog.png">
-<source type="image/webp" srcset="images/nobglog.png">
-<picture>
-<source type="image/avif" srcset="images/nobglog.avif">
-<source type="image/webp" srcset="images/nobglog.webp">
-<picture>
-<source type="image/avif" srcset="images/nobglog.avif">
-<source type="image/webp" srcset="images/nobglog.webp">
-<picture>
-<source type="image/avif" srcset="images/nobglog.avif">
-<source type="image/webp" srcset="images/nobglog.webp">
-<picture>
-<source type="image/avif" srcset="images/nobglog.avif">
-<source type="image/webp" srcset="images/nobglog.webp">
-<picture>
-<source type="image/avif" srcset="images/nobglog.avif">
-<source type="image/webp" srcset="images/nobglog.webp">
-<img src="images/nobglog.png" alt="BeOne Sports logo">
-</picture>
-</picture>
-</picture>
-</picture>
-</picture>
-</picture>
+						<img src="images/ONWhiteBeONESportslogo.png" alt="BeOne Sports logo" loading="lazy" decoding="async">
 					</div>
 				</div>
 			</div>
@@ -480,6 +439,7 @@
 	<script defer src="js/hamburger.js"></script>
 	<script defer src="js/app.min.js"></script>
 	<script defer src="js/reveal.js"></script>
+	<script defer src="js/hp-reveal.js"></script>
 	
 	<!-- Hide loading screen when page is fully loaded -->
 	<script>
