--- a/index.html
+++ b/index.html
@@ -198,31 +198,11 @@
 
 				<div class="computers-media">
 					<div class="webapp-wrap">
-						<picture>
-<source type="image/avif" srcset="images/Computer.png">
-<source type="image/webp" srcset="images/Computer.png">
-<picture>
-<source type="image/avif" srcset="images/Computer2.png">
-<source type="image/webp" srcset="images/Computer2.png">
-<picture>
-<source type="image/avif" srcset="images/Computer2.png">
-<source type="image/webp" srcset="images/Computer2.png">
-<picture>
-<source type="image/avif" srcset="images/Computer2.png">
-<source type="image/webp" srcset="images/Computer2.png">
-<picture>
-<source type="image/avif" srcset="images/Computer2.png">
-<source type="image/webp" srcset="images/Computer2.png">
-<picture>
-<source type="image/avif" srcset="images/Computer2.png">
-<source type="image/webp" srcset="images/Computer2.png">
-<img src="images/Computer2.png" alt="Computer" class="webapplanding-image" loading="lazy" decoding="async">
-</picture>
-</picture>
-</picture>
-</picture>
-</picture>
-</picture>
+						<video class="webapplanding-video nos-video" autoplay muted loop playsinline poster="images/WebApp%20Landing.png">
+							<source src="videos/Animation2.webm" type="video/webm">
+							<source src="videos/Animation2.mp4" type="video/mp4">
+							Your browser does not support the video tag.
+						</video>
 					</div>
 				</div>
 			</div>
@@ -230,7 +210,7 @@
     
 		<section id="ams" class="ams">
 			<div class="container">
-				<h2 class="section-title">A fully integrated<br>athlete management<br>system (AMS)</h2>
+				<h2 class="section-title">A fully integrated<br>Athlete Management<br>System (AMS)</h2>
 				<p class="section-lead">Manage your organization’s coaches &amp; athletes simply. Assign individual training outcomes remotely and generate club-level insights and performance trends.</p>
 				<div class="ams-media">
 					<div class="nos-videos-grid">
@@ -268,10 +248,11 @@
 
 				<div class="nos-videos-grid">
 					<div class="nos-video-item">
-						<video class="nos-video" autoplay muted loop playsinline>
-							<source src="videos/Animation2.webm" type="video/webm">
-							Your browser does not support the video tag.
-						</video>
+						<picture>
+							<source type="image/avif" srcset="images/Computer2.png">
+							<source type="image/webp" srcset="images/Computer2.png">
+							<img src="images/Computer2.png" alt="Computer" class="nos-replacement-image" loading="lazy" decoding="async">
+						</picture>
 					</div>
 				</div>
 
