--- a/index.html
+++ b/index.html
@@ -246,14 +246,8 @@
 					<a class="btn btn-primary" href="#">Join BeOne</a>
 				</div>
 
-				<div class="nos-videos-grid">
-					<div class="nos-video-item">
-						<picture>
-							<source type="image/avif" srcset="images/Computer2.png">
-							<source type="image/webp" srcset="images/Computer2.png">
-							<img src="images/Computer2.png" alt="Computer" class="nos-replacement-image" loading="lazy" decoding="async">
-						</picture>
-					</div>
+				<div class="nos-media">
+					<img src="images/Computer2.png" alt="BeOne product preview" class="nos-centered-image" loading="lazy" decoding="async">
 				</div>
 
 				<div class="nos-video-logos">
