--- a/index.html
+++ b/index.html
@@ -297,12 +297,12 @@
 				<h2 class="section-title">Take it from them...</h2>
 				<div class="carousel" data-autoplay="true" data-interval="4000">
 					<div class="carousel-track">
-							<div class="carousel-item"><img src="images/Runner.png" alt="slide 1" loading="lazy" decoding="async"></div>
-							<div class="carousel-item"><img src="images/QBtogether.png" alt="slide 2" loading="lazy" decoding="async"></div>
-							<div class="carousel-item"><img src="images/drakejump.png" alt="slide 3" loading="lazy" decoding="async"></div>
-							<div class="carousel-item"><img src="images/Runner.png" alt="slide 4" loading="lazy" decoding="async"></div>
-							<div class="carousel-item"><img src="images/QBtogether.png" alt="slide 5" loading="lazy" decoding="async"></div>
-							<div class="carousel-item"><img src="images/drakejump.png" alt="slide 6" loading="lazy" decoding="async"></div>
+							<div class="carousel-item"><img src="images/Drakequote.png" alt="slide 1" loading="lazy" decoding="async"></div>
+							<div class="carousel-item"><img src="images/granite.png" alt="slide 2" loading="lazy" decoding="async"></div>
+							<div class="carousel-item"><img src="images/Hulabowl.jpg" alt="slide 3" loading="lazy" decoding="async"></div>
+							<div class="carousel-item"><img src="images/lukemac.jpg" alt="slide 4" loading="lazy" decoding="async"></div>
+							<div class="carousel-item"><img src="images/tonyvilani.jpg" alt="slide 5" loading="lazy" decoding="async"></div>
+							<div class="carousel-item"><img src="images/Top10.png" alt="slide 6" loading="lazy" decoding="async"></div>
 						</div>
 					<button class="carousel-prev" aria-label="Previous">◀</button>
 					<button class="carousel-next" aria-label="Next">▶</button>
