--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 			</a>
 			<nav class="desktop-nav">
 				<a href="./">Home</a>
-				<a href="#get-started">Get BeONE</a>
-				<a href="#contact">Contact Sales</a>
+				<a href="https://portal.beonesports.com/auth/login" target="_blank" rel="noopener noreferrer">Get BeONE</a>
+				<a href="mailto:info@beonesports.com">Contact Sales</a>
 			</nav>
 			<button class="hamburger" id="hamburgerBtn" aria-label="Toggle menu" aria-expanded="false">
 				<span></span>
@@ -141,15 +141,15 @@
 		</div>
 		<nav class="hamburger-menu" id="hamburgerMenu">
 			<a href="./">Home</a>
-			<a href="#get-started">Get BeONE</a>
-			<a href="#contact">Contact Sales</a>
+			<a href="https://portal.beonesports.com/auth/login" target="_blank" rel="noopener noreferrer">Get BeONE</a>
+			<a href="mailto:info@beonesports.com">Contact Sales</a>
 		</nav>
 	</header>
 
 	<!-- Main content begins -->
 	<main>
 		<section class="hero">
-			<div class="hero-bubble">25% winter discount<br>Start now <span class="bubble-arrow">></span></div>
+			<a class="hero-bubble" href="https://portal.beonesports.com/auth/login" target="_blank" rel="noopener noreferrer">25% winter discount<br>Start now <span class="bubble-arrow">></span></a>
 			<div class="container hero-inner">
 				<div class="hero-box">
 					<h1 class="hero-title">
@@ -244,7 +244,7 @@
                 <p class="nos-lead">The BeONE database is developed from Elite athlete movements and expert coaches and trainers. </p>
 
 				<div class="nos-cta">
-					<a class="btn btn-primary" href="#">Join BeOne</a>
+					<a class="btn btn-primary" href="https://portal.beonesports.com/auth/login" target="_blank" rel="noopener noreferrer">Join BeOne</a>
 				</div>
 
 				<div class="nos-media">
@@ -345,7 +345,7 @@
 						<li>Rankings &amp; benchmarks<br>from professional athletes</li>
 						<li>Systematic data, individual<br>training insights and data</li>
 					</ul>
-					<a class="btn hp-cta" href="#">Join BeOne</a>
+					<a class="btn hp-cta" href="https://portal.beonesports.com/auth/login" target="_blank" rel="noopener noreferrer">Join BeOne</a>
 					<div class="hp-logo">
 						<img src="images/BlackOTL_BeONESports.png" alt="BeOne Sports logo" loading="lazy" decoding="async">
 					</div>
@@ -368,8 +368,8 @@
 	
 	<!-- Floating CTA buttons that follow while scrolling -->
 	<div class="floating-cta" role="group" aria-label="Primary actions">
-		<a class="btn btn-primary" href="#">Get started</a>
-		<a class="btn btn-ghost" href="#">Contact sales</a>
+		<a class="btn btn-primary" href="https://portal.beonesports.com/auth/login" target="_blank" rel="noopener noreferrer">Get started</a>
+		<a class="btn btn-ghost" href="mailto:info@beonesports.com">Contact sales</a>
 	</div>
 
 	<script defer src="js/hamburger.js"></script>
