--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 			<nav class="desktop-nav">
 				<a href="./">Home</a>
 				<a href="https://portal.beonesports.com/auth/login" target="_blank" rel="noopener noreferrer">Get BeONE</a>
-				<a href="mailto:info@beonesports.com">Contact Sales</a>
+				<a href="contact.html">Contact Sales</a>
 			</nav>
 			<button class="hamburger" id="hamburgerBtn" aria-label="Toggle menu" aria-expanded="false">
 				<span></span>
@@ -142,7 +142,7 @@
 		<nav class="hamburger-menu" id="hamburgerMenu">
 			<a href="./">Home</a>
 			<a href="https://portal.beonesports.com/auth/login" target="_blank" rel="noopener noreferrer">Get BeONE</a>
-			<a href="mailto:info@beonesports.com">Contact Sales</a>
+			<a href="contact.html">Contact Sales</a>
 		</nav>
 	</header>
 
@@ -361,7 +361,7 @@
 			<div class="foot-links">
 				<a href="#">Privacy</a>
 				<a href="#">Terms</a>
-				<a href="#">Contact</a>
+				<a href="contact.html">Contact</a>
 			</div>
 		</div>
 	</footer>
@@ -369,7 +369,7 @@
 	<!-- Floating CTA buttons that follow while scrolling -->
 	<div class="floating-cta" role="group" aria-label="Primary actions">
 		<a class="btn btn-primary" href="https://portal.beonesports.com/auth/login" target="_blank" rel="noopener noreferrer">Get started</a>
-		<a class="btn btn-ghost" href="mailto:info@beonesports.com">Contact sales</a>
+		<a class="btn btn-ghost" href="contact.html">Contact sales</a>
 	</div>
 
 	<script defer src="js/hamburger.js"></script>
